<?xml version="1.0" encoding="utf-8"?>
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">
        <header android:fragment="a2dv606.androidproject.Settings.WaterCalculationFragmentPrefs"
            android:title="@string/water_calculation_settings_header_title"
            android:summary="@string/water_calculation_settings_header_summary"
            android:icon="@drawable/icon_water_drop">
            <extra android:name="header"
                android:value="water_calculation_header"/>
        </header>

    <header android:fragment="a2dv606.androidproject.Settings.UnitsFragmentPrefs"
        android:title="@string/glass_size_settings_header_title"
        android:summary="@string/glass_size_settings_summary"
        android:icon="@drawable/icon_glass">
        <extra android:name="header"
            android:value="glass_size_header"/>
    </header>


    <header android:fragment="a2dv606.androidproject.Settings.NotificationsFragmentPrefs"
        android:title="@string/notif_settings_header_title"
        android:icon="@drawable/icon_notification"
        android:summary="@string/notif_settings_header_summary">
    <extra android:name="header"
        android:value="notifications_header"/>    </header>
</preference-headers>